fix reference pictures alignment

--- a/stadelwieser/css/styles.less
+++ b/stadelwieser/css/styles.less
@@ -97,13 +97,18 @@ a.navbar-brand {
     }
 }
 
-#references {
-    div {
-        height: 100px;
-        img {
-            max-width: 100%;
-            max-height: 100px;
+#references{
+    .row{
+        height: 100%;
+        padding: 0 10%;
+        .col-lg-4, col-lg-6{
+            height: 120px;
+            text-align: center;
+            img{
+                margin: 0 auto;
+            }
         }
+        
     }
 }
 
